Async now work at 99.8% less memory allocations